# etcd-tui

./: App UI FSM.excalidraw  Cargo.toml  LICENSE  README.md  docker-compose.yml
src/: app.rs  cli.rs  event.rs  events.rs  main.rs  shared_state.rs  tui.rs  utils.rs
src/app/: key_select.rs  mod.rs  value_edit.rs
src/components/: confirmation_popup.rs  context_help.rs  foreground_task.rs  key_selector.rs  mod.rs  new_key_popup.rs  value_editor.rs
src/ui/: key_selection_scene.rs  mod.rs  value_editor_scene.rs
