[package]
name = "etcd-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
crossterm = { version = "0.27", features = ["event-stream"] }
etcd-client = { version = "0.12", features = ["tls-roots"] }
futures = "0.3"
ratatui = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tui-textarea = { version = "0.2", features = ["ratatui-crossterm"], default-features = false }
